--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "group-project-boilerplate-2020",
+  "name": "group-project-restaurant-2020",
   "version": "0.0.1",
-  "description": "",
+  "description": "A template website for restaurants, written by members of the Winter 2020 Code Cooperative cohort",
   "main": "index.js",
   "scripts": {
     "server": "gulp server"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/codecooperative/group-project-boilerplate-2020.git"
+    "url": "git+https://github.com/codecooperative/group-project-restaurant-2020.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/codecooperative/group-project-boilerplate-2020/issues"
+    "url": "https://github.com/codecooperative/group-project-restaurant-2020/issues"
   },
-  "homepage": "https://github.com/codecooperative/group-project-boilerplate-2020#readme",
+  "homepage": "https://github.com/codecooperative/group-project-restaurant-2020#readme",
   "devDependencies": {
     "browser-sync": "^2.26.7",
     "gulp": "^4.0.2"
