--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A template website for restaurants, written by members of the Winter 2020 Code Cooperative cohort",
   "main": "index.js",
   "scripts": {
-    "start:dev": "webpack-dev-server --watch",
+    "start": "webpack-dev-server --mode development",
     "server": "gulp server"
   },
   "repository": {
@@ -18,14 +18,22 @@
   },
   "homepage": "https://github.com/codecooperative/group-project-restaurant-2020#readme",
   "devDependencies": {
+    "@babel/cli": "^7.8.3",
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-react": "^7.7.4",
     "babel-loader": "^8.0.6",
     "browser-sync": "^2.26.7",
+    "css-loader": "^3.4.2",
     "gulp": "^4.0.2",
+    "style-loader": "^1.1.3",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
+  },
+  "dependencies": {
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-hot-loader": "^4.12.18"
   }
 }
