--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A template website for restaurants, written by members of the Winter 2020 Code Cooperative cohort",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development",
-    "server": "gulp server"
+    "lint": "eslint .",
+    "start": "webpack-dev-server --mode development"
   },
   "repository": {
     "type": "git",
@@ -25,7 +25,9 @@
     "babel-loader": "^8.0.6",
     "browser-sync": "^2.26.7",
     "css-loader": "^3.4.2",
-    "gulp": "^4.0.2",
+    "eslint": "^6.8.0",
+    "eslint-config-amex": "^11.2.0",
+    "eslint-plugin-react": "^7.18.3",
     "style-loader": "^1.1.3",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
