--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A template website for restaurants, written by members of the Winter 2020 Code Cooperative cohort",
   "main": "index.js",
   "scripts": {
+    "build": "webpack -p",
     "lint": "eslint .",
     "start": "webpack-dev-server --mode development"
   },
@@ -34,6 +35,7 @@
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
+    "html-webpack-plugin": "^3.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-hot-loader": "^4.12.18",
